Fixing a spacing glitch on the homepage

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -242,7 +242,7 @@ li {margin-bottom: 1em; }
         position: relative;
 }
 
-#Cover h3 { margin: 40px 0 0 0; }
+#Cover h3 { margin: 20px 0 0 0; }
 .exhibition-small { padding: 0; margin: 0; }
 .exhibition-small h3 { margin-top: 0px !important; }
 p.exhibition-small { margin-top: 20px; margin-bottom: 10px; }
